syntax = "proto3";

option go_package = "hello/pb";

package hello.v1;

service HelloService {
  rpc SayHello (SayHelloRequest) returns (SayHelloResponse) {}
}

message SayHelloRequest {
  string name = 1;
}

message SayHelloResponse {
  string message = 1;
}
